--- a/week01/basic-layout.html.html
+++ b/week01/basic-layout.html.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holy Grail Layout | Christopher T. Bahinting | WDD131</title>
+    <title>Personal Profile of Christopher T. Bahitning | WDD131</title>
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 
 <body>
-
-<div class="header">
+<header class="header">
   <h1>HEADER CONTENT</h1>
 </div>
 <nav class="navbar">
       <a href="index.html">Home</a>
       <a href="project.html">Projects</a>
       <a href="services.html">Services</a>
-      <a href="contact.html">Contac Us</a>
+      <a href="contact.html">contact Us</a>
 </nav>
+</header>
 
 <div class="content">
 <div class="main_content">
