--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -18,7 +18,7 @@
       <a href="contact.html">contact Us</a>
 </nav>
 </header>
-
+<main>  
 <div class="content">
 <div class="main_content">
   <h2>Main Contents</h2>
@@ -30,7 +30,7 @@
 </div>
 
 
-
+</main>
 
 
 
