--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -18,8 +18,8 @@
       <a href="contact.html">contact Us</a>
 </nav>
 </header>
-<main>  
-<div class="content">
+
+<main class="content">  
 <div class="main_content">
   <h2>Main Contents</h2>
 </div>
@@ -27,9 +27,6 @@
 <div class="aside_content">
   <h2>Aside  Content</h2>
 </div>
-</div>
-
-
 </main>
 
 
