add meta author

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Christopher T. Bahinting">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by Christopher T. Bahinting, in this course we are going to study about HTML, CSS and JavaScript.">
     <title>WDD 131 - Dynamic Web Fundamentals | Christopher T. Bahinting</title>
 
@@ -37,7 +38,6 @@
      
 
     <section class="card">
-        
        <div class="leftcolumn">
          <h2>About Me</h2>
           <div class="card-one">
