temporarity merging h1 and title

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 </head>
 <body>
     <header>
-        <span id="course-title">WDD131-Dynamic Web Fundamentals </span>
+        <div class="container">
+            <span id="course-title">WDD131-Dynamic Web Fundamentals - </span>
+            <h1>Christopher T. Bahinting</h1>
+         </div>
 <nav>
         <ul>
             <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn Profile</a></li>
@@ -34,9 +37,8 @@
 
 <main>
     
-     <h1>Christopher T. Bahinting</h1>
+     <!-- <h1>Christopher T. Bahinting</h1> I am modifying this -->
      
-
     <section class="card">
        <div class="leftcolumn">
          <h2>About Me</h2>
