bring back the original setting

--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <span id="course-title">WDD131-Dynamic Web Fundamentals - </span>
-            <h1>Christopher T. Bahinting</h1>
-         </div>
+        <span id="course-title">WDD131-Dynamic Web Fundamentals </span>
 <nav>
         <ul>
             <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn Profile</a></li>
@@ -37,7 +34,7 @@
 
 <main>
     
-     <!-- <h1>Christopher T. Bahinting</h1> I am modifying this -->
+     <h1>Christopher T. Bahinting</h1>
      
     <section class="card">
        <div class="leftcolumn">
