modify the html tag

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <main>
     
-     <h1 id="myName">Christopher T. Bahinting</h1>
+     <h1>Christopher T. Bahinting</h1>
      <div class="card-container">
     <section class="card">
        <div class="leftcolumn">
