adjusting a minor setting in small screen setting

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <span id="course-title">WDD131-Dynamic Web Fundamentals </span>
+        <span id="course-title">WDD131-Dynamic Web Fundamentals - Christopher T. Bahinting</span>
 <nav>
         <ul>
             <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn Profile</a></li>
