making the image fullscreen once click

--- a/temples.html
+++ b/temples.html
@@ -37,7 +37,7 @@
 
 <main>
     <h2>Home</h2>
-    <div class="temple_gallery">
+    <div id="images" class="temple_gallery">
     <figure>
         <img src="images/cebu_temple.jpg" alt="Cebu Philippines Temple">
         <figcaption>Cebu Philippines Temple</figcaption>
