week3: W03 Learning Activity: Design Principles

--- a/temples.html
+++ b/temples.html
@@ -21,7 +21,8 @@
 <body>
     
 <header>
-    <button type="button" id="menu"></button>
+    <!-- <button type="button" id="menu"></button> -->
+    <button type="button" id="menu" aria-label="Open menu"></button>
     <h1>Temple Album</h1>        
     <nav>
         <ul>
