--- a/place.html
+++ b/place.html
@@ -63,7 +63,10 @@
             </div>
             
                 <section class="weather-section">
-                    <h3 class="weather-title">Weather</h3>
+                    <h3 class="weather-title">Weather
+                        <img src="images/weather.svg" alt="Weather icon" style="width:24px; height:24px; margin-left:8px; vertical-align:middle;">
+                    </h3>
+
                     <div class="info-data">
                         <span class="label">Temperature</span>
                         <span class="colon">:</span>
