modify the html title

--- a/place.html
+++ b/place.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" Content="Christopher T. Bahinting">
     <meta name="Description" Content="Place - this is webpage about place with weather and brief Description about our place.">
+    <title>Place - this is webpage about place with weather and brief Description about our place</title>
     
     <link rel="stylesheet" href="styles/place_large.css" media="(min-width: 1000px)">
     <link rel="stylesheet" href="styles/place_small.css" media="(max-width: 999px)">
 
-    <title>WDD131 - Country Page | Christopher T. Bahinting</title>
-
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
