--- a/place.html
+++ b/place.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" Content="Christopher T. Bahinting">
     <meta name="Description" Content="Place - this is webpage about place with weather and brief Description about our place.">
-    <title>Place - this is webpage about place with weather and brief Description about our place</title>
+    <title>Place - Country Page</title>
     
     <link rel="stylesheet" href="styles/place_large.css" media="(min-width: 1000px)">
     <link rel="stylesheet" href="styles/place_small.css" media="(max-width: 999px)">
@@ -17,8 +17,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-   
-</head>
+   </head>
 <body>
     <header>
         <h1>Philippines</h1>
