modify meta description

--- a/place.html
+++ b/place.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" Content="Christopher T. Bahinting">
-    <meta name="Description" Content="Place - this is webpage about place with weather and brief Description about our place.">
+    <meta name="description" content="Discover facts about the Philippines including population, capital, language, currency, and current weather conditions.">
     <title>Place - Country Page</title>
     
     <link rel="stylesheet" href="styles/place_large.css" media="(min-width: 1000px)">
