--- a/place.html
+++ b/place.html
@@ -10,14 +10,13 @@
     <link rel="stylesheet" href="styles/place_large.css" media="(min-width: 1000px)">
     <link rel="stylesheet" href="styles/place_small.css" media="(max-width: 999px)">
 
-   
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;1,500&family=Roboto:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+</head>
 
-   </head>
+
 <body>
     <header>
         <h1>Philippines</h1>
@@ -63,7 +62,7 @@
             
                 <section class="weather-section">
                     <h3 class="weather-title">Weather
-                        <img src="images/weather.svg" alt="Weather icon" style="width:24px; height:24px; margin-left:8px; vertical-align:middle;">
+                        <img src="images/weather.svg" alt="Weather icon">
                     </h3>
 
                     <div class="info-data">
