--- a/place.html
+++ b/place.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="uthor" Content="Christopher T. Bahinting">
+    <meta name="author" Content="Christopher T. Bahinting">
     <meta name="description" content="Discover facts about the Philippines including population, capital, language, currency, and current weather conditions.">
     <title>Place - Country Page</title>
     
