correcting the Old to old

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -25,7 +25,7 @@
     <nav>
         <ul>
         <li><a href="#" id="home" class="active">Home</a></li>
-        <li><a href="#" id="Old">Old</a></li>
+        <li><a href="#" id="old">Old</a></li>
         <li><a href="#" id="new">New</a></li>
         <li><a href="#" id="large">Large</a></li>
         <li><a href="#" id="small">Small</a></li>   
