change font color

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -17,10 +17,16 @@
     <header>
         <img src="images/bahins_logo.jpg" alt="logo">
         <h1>Site Name: Bahins Web and Software Solutions</h1>
-        <p>The purpose of this website is to offer affordable and professional software and website development services to small businesses and service-based establishments. These include small stores, online shops, salons, massage SPA's, water refilling stations, cooperatives, associations and similar businesses. The site will showcase available services, pricing options, portfolio samples, and a contact form to help small business owners easily start their digital journey.</p>
-    </header>
+        <p>I choose this site name because it contains the part of my surname and this contains also  the services that we want to offer.</p>
+         </header>
+       
 
     <main>
+        <div class="purpose">
+            <h2>Purpose</h2>
+             <p>The purpose of this website is to offer affordable and professional software and website development services to small businesses and service-based establishments. These include small stores, online shops, salons, massage SPA's, water refilling stations, cooperatives, associations and similar businesses. The site will showcase available services, pricing options, portfolio samples, and a contact form to help small business owners easily start their digital journey.</p>
+        </div>
+
         <div class="scenarios">
             <h2>Scenarios</h2>
             <p>The website should answer the following scenario questions:</p>
