remove the span at footer

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -81,7 +81,7 @@
     </main>
     <footer>
         <p>
-        &copy; 2025 | Christopher T. Bahinting | Lapu-lapu, Cebu, Philippines</span> 
+        &copy; 2025 | Christopher T. Bahinting | Lapu-lapu, Cebu, Philippines
         </p>
         
     </footer>
