--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -42,13 +42,13 @@
         <div class="color_schema">
             <h2>Color Schema</h2>
             <ul>
-                <li>Background color: FFFFFF (white) </li>
-                <li>Primary color: 38618C (lapis Lazuli)</li>
-                <li>Secondary color: FFE74C (Maize)</li>
-                <li>Highlights color: FF5964 (Bright pink)</li>
-                <li>Accent color: 35A7FF (Argentinian Blue)</li>
+                <li>Background color: #FFFFFF (white) </li>
+                <li>Primary color: #38618C (lapis Lazuli)</li>
+                <li>Secondary color: #FFE74C (Maize)</li>
+                <li>Highlights color: #FF5964 (Bright pink)</li>
+                <li>Accent color: #35A7FF (Argentinian Blue)</li>
              </ul>
-                <img src="images/color_schema.jpg" alt="">
+                <img src="images/color_schema.jpg" alt="Color schema of the website color palette">
         </div>
 
         <div class="typography">
