--- a/week05/Form-start/index.html
+++ b/week05/Form-start/index.html
@@ -48,7 +48,7 @@
 <!-- CONTENT HERE -->
 <main>
     <h1>Course Proposal Application</h1>
-    <form method="get" action="thanks.html">
+    <form method="get" action="thanks.html" class="wf1">
 
     <fieldset>
         <legend>Applicant Information</legend>
@@ -67,10 +67,11 @@
         <label> <input type="radio" name="audience" value="advanced"> Advanced</label>
    
         <div>Software Needed</div>
-        <label> <input type="checkbox"  name="editing"  value="yes">Photo Editing</label>
         <label> <input type="checkbox"  name="code"  value="yes">Coding</label>
-        <label> <input type="checkbox"  name="process"  value="yes">Preprocessor</label>
         <label> <input type="checkbox"  name="client"  value="yes">FTP Client</label>
+        <label> <input type="checkbox"  name="editing"  value="yes">Photo Editing</label>
+        <label> <input type="checkbox"  name="process"  value="yes">Preprocessor</label>
+        
     </fieldset>
 
     <fieldset>
@@ -79,7 +80,7 @@
 
         <label>Course Subject
             <select name="subject">
-             <option value="">Please Select</option>
+             <option value="">Please Select &#9662;</option>
             <option value="software">Software Development</option>
             <option value="creative">Creative Professional</option>
             <option value="info">Information Technology</option>
@@ -93,7 +94,7 @@
         <label>How Many Authors <input type="number"    name="authors"></label>
     </fieldset>
 
-    <input type="submit" value="Submit Application">
+    <input type="submit" value="Propose My Course">
 
     </form>
 
