modify the placeholder

--- a/form.html
+++ b/form.html
@@ -27,10 +27,10 @@
 <fieldset class="product-select">
     <label for="product-select">Product Name</label>
     <select id="product-select" name="subject" required>
-    <option value=""  disabled selected ></option>
+    <option value=""  disabled selected >Select a Product</option>
     </select>
 </fieldset>
-
+ 
   <fieldset class="rating-group">
   <legend>Overall Rating</legend>
   <div class="stars">
