--- a/review.html
+++ b/review.html
@@ -27,7 +27,7 @@
             Your input helps us improve our products and services.<br />
             Thanks for being a valued customer!</p>
 
-        <p> You have submitted <span id="review-count">0</span> reviews so far.</p>
+        <p> Number of Reviews Completed: <span id="review-count">0</span></p>
         </div>
 
 
