--- a/week06/response.html
+++ b/week06/response.html
@@ -19,19 +19,22 @@
 
 <body>
 
-  <header class="logo">
-    <img src="images/bahins_logo.jpg" alt="Bahins Web Logo" class="logo-img" />
-    <h1>Bahins Web & Software Solutions</h1>
-  </header>
+ <header class="header">
+      <div class="logo">
+        <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img" />
+        <h1>Bahins Web & Software Solutions</h1>
+      </div>
 
-  <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
-  <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html" class="active">Contact Us</a>
-  </nav>
+      <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
+
+      <nav class="navbar">
+        <a href="index.html"  >Home</a>
+        <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="about.html" >About Us</a>
+        <a href="contact.html"  >Contact Us</a>
+      </nav>
+</header>
 
   <main>
 
