--- a/week06/about.html
+++ b/week06/about.html
@@ -18,19 +18,23 @@
 </head>
 
 <body>   
-    <div class="logo">
-      <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img">
-      <h1>Bahins Web & Software Solutions</h1>
-    </div>
+  <header class="header">
+  <div class="logo">
+    <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img" />
+    <h1>Bahins Web & Software Solutions</h1>
+  </div>
 
   <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
+
   <nav class="navbar">
-      <a href="index.html" >Home</a>
-      <a href="services.html">Services</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="about.html"  class="active">About Us</a>
-      <a href="contact.html">Contact Us</a>
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="about.html" >About Us</a>
+    <a href="contact.html"  >Contact Us</a>
   </nav>
+</header>
+
 
   <main>
     <section class="about-intro">
