--- a/week06/index.html
+++ b/week06/index.html
@@ -18,23 +18,24 @@
 </head>
 
 <body>
-  <div class="full-width-wrapper">
+   <header class="header">
+      <div class="logo">
+        <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img" />
+        <h1>Bahins Web & Software Solutions</h1>
+      </div>
 
-    <div class="logo">
-      <img src="images/bahins_logo.jpg" alt="Bahins Web and Software Solutions Logo" class="logo-img" loading="lazy" >
-      <h1>Bahins Web & Software Solutions</h1>
-    </div>
+      <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
 
-    <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
-    <nav class="navbar">
-      <a href="index.html" class="active" >Home</a>
-      <a href="services.html">Services</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="about.html">About Us</a>
-      <a href="contact.html">Contact Us</a>
-    </nav>
-  </div>
-
+      <nav class="navbar">
+        <a href="index.html" >Home</a>
+        <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="about.html" >About Us</a>
+        <a href="contact.html"  >Contact Us</a>
+      </nav>
+</header>
+  
+<main>
 <div class="welcome_hero">
       <div class="hero">
           <div class="nested-hero">
@@ -97,6 +98,7 @@
                 <p>Intuitive and engaging interfaces that delight your users.</p>
         </div>
     </section>
+</main>
 <script src="script/bahins.js"></script>
 
   <footer class="footer">
