--- a/week06/portfolio.html
+++ b/week06/portfolio.html
@@ -17,20 +17,24 @@
 </head>
 
 <body>
-<div class="logo">
-  <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img">
-  <h1>Bahins Web & Software Solutions</h1>
-</div>
+<header class="header">
+      <div class="logo">
+        <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img" />
+        <h1>Bahins Web & Software Solutions</h1>
+      </div>
 
-<button class="hamburger" aria-label="Toggle menu">&#9776;</button>
-<nav class="navbar">
-     <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="portfolio.html" class="active">Portfolio</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact Us</a>
-</nav>
+      <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
 
+      <nav class="navbar">
+        <a href="index.html"  >Home</a>
+        <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="about.html" >About Us</a>
+        <a href="contact.html"  >Contact Us</a>
+      </nav>
+</header>
+  
+<main>
 <div class="heading-portfolio">
     <h1>Our Portfolio</h1>
     <p>Here are some of the projects we've worked on for small businesses, organizations, and professionals.</p>
@@ -86,6 +90,7 @@
       <a href="https://bahintingchristopher.github.io/wdd131/index" target="_blank" rel="noopener">👉 View Project</a>
     </div>
 </div>
+</main>
 
 
 <script src="script/bahins.js" defer></script>
