--- a/week06/services.html
+++ b/week06/services.html
@@ -17,21 +17,23 @@
 
 </head>
 <body>
-        
-    
-<div class="logo">
-  <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img">
-  <h1>Bahins Web & Software Solutions</h1>
-</div>
+ <header class="header">
+      <div class="logo">
+        <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img" />
+        <h1>Bahins Web & Software Solutions</h1>
+      </div>
 
-<button class="hamburger" aria-label="Toggle menu">&#9776;</button>
-<nav class="navbar">
-     <a href="index.html">Home</a>
-    <a href="services.html" class="active">Services</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="about.html">About Us</a>
-    <a href="contact.html">Contact Us</a>
-</nav>
+      <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
+
+      <nav class="navbar">
+        <a href="index.html"  >Home</a>
+        <a href="services.html">Services</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="about.html" >About Us</a>
+        <a href="contact.html"  >Contact Us</a>
+      </nav>
+</header>
+
  <main class="services-page">
     <h1>Our Services</h1>
     <p>We provide smart, affordable digital solutions tailored to help small businesses grow and thrive in the digital world.</p>
