--- a/week06/portfolio.html
+++ b/week06/portfolio.html
@@ -13,6 +13,8 @@
    
     <link rel="stylesheet" href="styles/large_screen.css" />
     <link rel="stylesheet" href="styles/small_screen.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    
      
 </head>
 
@@ -20,7 +22,7 @@
 <header class="header">
       <div class="logo">
         <img src="images/bahins_logo.jpg" alt="My Logo" class="logo-img" />
-        <h1>Bahins Web & Software Solutions</h1>
+        <!-- <h1>Bahins Web & Software Solutions</h1> -->
       </div>
 
       <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
@@ -30,7 +32,7 @@
         <a href="services.html">Services</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="about.html" >About Us</a>
-        <a href="contact.html"  >Contact Us</a>
+        <a href="contact.html" id="contact-link" class="contact-link">Get in Touch</a>
       </nav>
 </header>
   
