--- a/week06/contact.html
+++ b/week06/contact.html
@@ -97,14 +97,73 @@
 <script src="script/bahins.js" defer></script>
 
 <footer class="footer">
-    <p>&copy; 2025 | Bahins Web & Software Solutions</p>
+  <div class="footer-container">
+    
+    <!-- About / Company Description -->
+    <div class="footer-section">
+      <h3>SUSTAINABLE STRATEGIC ADVANCEMENT</h3>
+      <p>
+        Bahins Web & Software Solutions empowers businesses with custom websites and software tools designed to grow and innovate. We serve a wide range of industries with tailored, affordable digital solutions.
+      </p>
+          <div class="social-icons">
+            <a href="https://www.facebook.com/profile.php?id=61579616556378" target="_blank" id="fb-link">
+            <img src="images/fb_icon.jpg" alt="Facebook Icon" /></a>
+            <a href="https://www.linkedin.com/in/cbahinting" target="_blank" id="linkedin-link">
+            <img src="images/linkedin_icon.png" alt="LinkedIn Icon" /></a>
+          </div>
+    </div>
 
+       <!-- Browse -->
+    <div class="footer-section">
+      <h3>BROWSE</h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Take Action -->
+    <div class="footer-section">
+      <h3>TAKE ACTION</h3>
+      <ul>
+        <li><a href="tel:+639354432178">Call Us</a></li>
+        <li><a href="mailto:bahintingchristopher@gmail.com">Email</a></li>
+      </ul>
+    </div>
+
+    <!-- Newsletter Signup -->
+    <div class="footer-section newsletter">
+      <h3>NEWSLETTER</h3>
+      <p>Subscribe to get the latest updates on our services and digital insights.</p>
+      <form action="https://formsubmit.co/bahintingchristopher@gmail.com" method="POST">
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email Address" required>
+        <button type="submit">SUBSCRIBE</button>
+      </form>
+    </div>
+
+  </div>
+
+  <!-- Bottom -->
+  <div class="footer-bottom">
+    <p>&copy; 2025 | Bahins Web & Software Solutions | All Rights Reserved.</p>
+    <p>Website by Bahins | <a href="privacy.html">Privacy Policy</a></p>
+  </div>
+</footer>
+
+<!-- BELOW IS MY BEGINNER VERSION OF FOOTER
+  <footer class="footer">
+    <p>&copy; 2025 | Bahins Web & Software Solutions</p>
     <div class="social-icons">
       <a href="https://www.facebook.com/profile.php?id=61579616556378" target="_blank" id="fb-link"><img src="images/fb_icon.jpg" alt="Facebook Icon" /></a>
       <a href="https://www.linkedin.com/in/cbahinting" target="_blank" id="linkedin-link"><img src="images/linkedin_icon.png" alt="LinkedIn Icon" /></a>
       <a href="#"><img src="images/wattsapp_icon.png" alt="WhatsApp Icon" /></a>
     </div>
-  </footer>
+  </footer> -->
+
 </body>
 </html>
 
