--- a/week06/privacy.html
+++ b/week06/privacy.html
@@ -33,83 +33,99 @@
         <a href="services.html">Services</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="about.html" >About Us</a>
-      <a href="contact.html" id="contact-link" class="contact-link">Get in Touch</a>
+        <a href="contact.html" id="contact-link" class="contact-link">Get in Touch</a>
+        <a href="privacy.html" class="active">Privacy Policy</a>
       </nav>
 </header>
-  
-<main>
-<div class="welcome_hero">
-      <div class="hero">
-          <div class="nested-hero">
-            <img src="images/bahins_h1.jpg" alt="hero image" class="hero-img" >
-          </div>
-      </div>
 
-    <div class="welcome">
-        <h1>Crafting Beautiful, Responsive Websites That Grow Your Business</h1>
+    <main class="privacy-container">
+        <h1>Privacy Policy</h1>
+        <p class="updated-date"><em>Effective Date: October 2025</em></p>
+
+        <section>
+            <h2>Introduction</h2>
             <p>
-            Welcome to Bahins Web & Software Solutions — your trusted partner in transforming small businesses into digital success stories. We specialize in helping a diverse range of businesses—whether you're running a local store, managing an online shop, operating a salon, running a water station, leading a cooperative, or organizing an association—embrace the power of digital technology.
+                At <strong>Bahins Web & Software Solutions</strong>, we value your trust and are committed to protecting your personal information. This Privacy Policy explains how we collect, use, and safeguard your data when you interact with our website and services.
+            </p>
+        </section>
+
+        <section>
+            <h2>Information We Collect</h2>
+            <p>
+                We collect personal information that you voluntarily provide to us, such as when you:
+            </p>
+            <ul>
+                <li>Fill out contact or inquiry forms</li>
+                <li>Send us emails or messages</li>
+                <li>Request quotes or project consultations</li>
+            </ul>
+            <p>
+                The types of information we may collect include your name, email address, phone number, company or organization name, and any details relevant to your inquiry or project.
             </p>
             <p>
-            Our mission is to simplify your journey to digital transformation by providing tailored, user-friendly websites, efficient management systems, and smart customer engagement tools that are designed to fit your unique needs and budget. From creating stunning online storefronts to building custom software solutions that streamline your daily operations, we focus on delivering smart, affordable solutions that help you grow your business, increase your reach, and connect better with your customers.
+                We are the sole custodians of this information and do not sell or share your personal data with third parties for marketing purposes.
             </p>
-            <!-- <p>
-            At Bahins, we believe technology should work for you—not the other way around. Let us empower your business with innovative tools that save you time, reduce hassle, and open doors to new opportunities in the digital world. Together, we will help you build a stronger brand, enhance customer relationships, and achieve sustainable growth.
-            </p> -->
-    </div>
-</div>
+        </section>
 
-   <div class="mission-vision">
-      <div class="mission">
-              <h2>Our Mission</h2>
-              <p>
-                To empower businesses by delivering innovative, reliable, and user-friendly web and software solutions that drive growth, enhance productivity, and provide exceptional value to our clients.
-              </p>
-      </div>
+        <section>
+            <h2>How we use your informations</h2>
+            <p>
+                The data you provide allows us to:
+            </p>
+            <ul>
+                <li>Respond effectively to your questions or requests</li>
+                <li>Provide accurate project estimates and service information</li>
+                <li>Send you important updates, offers, or newsletters if you opt-in</li>
+                <li>Improve our website, services, and customer experience</li>
+            </ul>
+            <p>
+                Your information will only be shared internally with team members or trusted service providers who assist us in delivering our solutions, always under strict confidentiality.
+            </p>
+            <p>
+                You can opt out of promotional communications at any time by contacting us directly.
+            </p>
+        </section>
 
-      <div class="vision">
-              <h2>Our Vision</h2>
-              <p>
-                To be a leading technology partner recognized for transforming ideas into cutting-edge digital experiences that shape the future of businesses worldwide.
-              </p>
-      </div>
-</div>
+        <section>
+            <h2>Data Security</h2>
+            <p>
+                We prioritize the security of your personal information. We use industry-standard measures and controls to protect your data from unauthorized access, alteration, or destruction.
+            </p>
+            <p>
+                Only authorized employees or contractors who require access to perform their duties can view your information, and they are bound by confidentiality agreements.
+            </p>
+        </section>
 
+        <section>
+            <h2>Cookies and Tracking Technologies</h2>
+            <p>
+                Our website uses cookies and similar tools to enhance your experience, analyze site traffic, and remember your preferences.
+            </p>
+            <p>
+                Cookies help us understand how visitors use our site and improve functionality.
+            </p>
+            <p>
+                You may choose to disable cookies in your browser settings. However, some features of the website may not work as intended without them.
+            </p>
+        </section>
 
-<div class="cta-cont">
-      <section class="cta">
-                <h2>Ready to Transform Your Business?</h2>
-                <p>Contact us today to discuss your project and get a free consultation!</p>
-            <div class="cta-button-wrapper">
-                  <a href="contact.html" class="cta-button">Get in Touch</a>
-            </div>
-      </section>
-</div>
-
-    <section class="services-overview">
-          <div class="service-item">
-                <h3>Websites for Small Businesses</h3>
-                <p>Custom, scalable websites tailored to your business needs.</p>
-          </div>
-        <div class="service-item">
-                <h3>Custom Tools to Manage Your Work</h3>
-                <p>Robust software applications to streamline your operations.</p>
-        </div>
-        <div class="service-item">
-                <h3>Modern Design for Better Engagement</h3>
-                <p>Intuitive and engaging interfaces that delight your users.</p>
-        </div>
-    </section>
-</main>
-<script src="script/bahins.js"></script>
+        <section>
+            <h2>Your Consent and Rights</h2>
+            <p>
+                By using our website and services, you consent to this Privacy Policy. We may update this policy occasionally to reflect changes in practices or legal requirements, and will post the latest version here with the updated date.
+            </p>
+            <p>
+                If you have any questions or concerns about your privacy, please contact us at <a href="mailto:bahintingchristopher@gmail.com">bahintingchristopher@gmail.com</a>.
+            </p>
+        </section>
+    </main>
 
   <footer class="footer">
-    
   <div class="footer-container">
     
     <!-- About / Company Description -->
     <div class="footer-section">
-      <h3>SUSTAINABLE STRATEGIC ADVANCEMENT</h3>
+        <h3>SUSTAINABLE STRATEGIC ADVANCEMENT</h3>
       <p>
         Bahins Web & Software Solutions empowers businesses with custom websites and software tools designed to grow and innovate. We serve a wide range of industries with tailored, affordable digital solutions.
       </p>
