remove design by bahins

--- a/week06/contact.html
+++ b/week06/contact.html
@@ -148,9 +148,9 @@
   </div>
 
   <!-- Bottom -->
-  <div class="footer-bottom">
+   <div class="footer-bottom">
     <p>&copy; 2025 | Bahins Web & Software Solutions | All Rights Reserved.</p>
-    <p>Website by Bahins | <a href="privacy.html">Privacy Policy</a></p>
+    <a href="privacy.html">Privacy Policy</a>
   </div>
 </footer>
 
