--- a/week06/about.html
+++ b/week06/about.html
@@ -131,8 +131,9 @@
   <!-- Bottom -->
   <div class="footer-bottom">
     <p>&copy; 2025 | Bahins Web & Software Solutions | All Rights Reserved.</p>
-    <p>Website by Bahins | <a href="privacy.html">Privacy Policy</a></p>
+    <a href="privacy.html">Privacy Policy</a>
   </div>
+
 </footer>
 
 <!-- BELOW IS MY BEGINNER VERSION OF FOOTER
