--- a/week06/response.html
+++ b/week06/response.html
@@ -112,7 +112,7 @@
   <!-- Bottom -->
   <div class="footer-bottom">
     <p>&copy; 2025 | Bahins Web & Software Solutions | All Rights Reserved.</p>
-    <p>Website by Bahins | <a href="privacy.html">Privacy Policy</a></p>
+    <a href="privacy.html">Privacy Policy</a>
   </div>
 </footer>
 
