privacy mobile indention

--- a/week06/privacy.html
+++ b/week06/privacy.html
@@ -120,6 +120,8 @@
         </section>
     </main>
 
+    <script src="script/bahins.js" defer></script>
+
   <footer class="footer">
   <div class="footer-container">
     
