--- a/week06/contact.html
+++ b/week06/contact.html
@@ -150,8 +150,10 @@
       <h3>NEWSLETTER</h3>
       <p>Subscribe to get the latest updates on our services and digital insights.</p>
       <form action="https://formsubmit.co/bahintingchristopher@gmail.com" method="POST">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email Address" required>
+        <label for="name" class="bebet">Your Name</label>
+        <input type="text" id="newsletter-name" name="name" placeholder="Your Name" required autocomplete="name" >
+        <label for="email" class="bebet">Email Address</label>
+        <input type="email" id="newsletter-email" name="email" placeholder="Your Email Address"  required autocomplete="email">
         <button type="submit">SUBSCRIBE</button>
       </form>
     </div>
