--- a/week06/index.html
+++ b/week06/index.html
@@ -28,7 +28,7 @@
 
       <button class="hamburger" aria-label="Toggle menu">&#9776;</button>
 
-      <nav class="navbar">
+       <nav class="navbar">
         <button class="close-btn" aria-label="Close menu">✕</button>
         <a href="index.html" >Home</a>
         <a href="services.html">Services</a>
@@ -37,13 +37,14 @@
       <a href="contact.html" id="contact-link" class="contact-link">Get in Touch</a>
        <!-- ADDITIONAL NAV CONTENT -->
       <div class="contact-info-mobile">
-        <a href="tel:+639128751487" class="quick-call" >Call: +639128751487</a>
-        <a href="mailto:bahintingchristopher@gmail.com" class="quick-email" aria-label="Email Us"> Email: bahintingchristopher@gmail.com</a>
+        <a href="tel:+639128751487" class="quick-call" >Call Us</a>
+        <a href="mailto:bahintingchristopher@gmail.com" class="quick-email" aria-label="Email Us"> Email Us</a>
+        <a href="https://www.facebook.com/profile.php?id=61579616556378" target="_blank" aria-label="Facebook" rel="noopener noreferrer">Fb Page</a>
+        <a href="https://www.linkedin.com/in/cbahinting" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer">LinkedIn</a>
       </div>      
       <div class="social-links-mobile">
-        <a href="https://www.facebook.com/profile.php?id=61579616556378" target="_blank" aria-label="Facebook" rel="noopener noreferrer">Facebook Page</a>
-        <a href="https://www.linkedin.com/in/cbahinting" target="_blank" aria-label="LinkedIn" rel="noopener noreferrer">LinkedIn</a>
-         <a href="privacy.html" class="active">Privacy Policy</a>
+         <a href="faqs.html" class="faqs" >FAQS</a>
+        <a href="privacy.html" class="active">Privacy Policy</a>
       </div>
       </nav>
 </header>
@@ -141,6 +142,7 @@
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
+       <li><a href="faqs.html">FAQs</a></li>
       </ul>
     </div>
 
