--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple and intuitive table tennis scoring app to keep track of your ping pong games easily.">
+    <meta name="author" content="Christopher T. Bahinting">
     <title>Table Tennis Scoring</title>
+
     <link rel="stylesheet" href="score.css">
     <link rel="stylesheet" href="mobile.css">
-
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#4CAF50">
 
