--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Christopher T. Bahinting">
     <title>Table Tennis Scoring</title>
 
-    <link rel="stylesheet" href="score.css">
-    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="score.v1.css">
+    <link rel="stylesheet" href="mobile.v1.css">
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#4CAF50">
 
@@ -50,7 +50,7 @@
                 </div>
    
  </main>
- <script src="score.js"></script>
+ <script src="score.v1.js"></script>
 </body>
 
 <footer>
