change to form fetch on render live

--- a/week06/contact.html
+++ b/week06/contact.html
@@ -75,8 +75,7 @@
 <section class="contact-form">
   <h2>Send Us a Message</h2>
   
- <form action="http://localhost:3000/submit-message" method="POST" id="contact-form">
-
+<form action="https://bahins-backend.onrender.com/submit-message" method="POST" id="contact-form">
     
     <fieldset class="name">
       <label for="name">Name*:</label>
