index final project

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn Profile</a></li>
             <li><a href="https://byupw.instructure.com/." target="_blank">Canvas</a></li>
             <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/morm/8?lang=eng&id=p16#p16" target="_blank">Scripture</a></li>
-            <li><a href="final-project/" target="_blank">Final Project</a></li>
+            <li><a href="final-project/" target="https://bahintingchristopher.github.io/bahins/index.html">Final Project</a></li>
         </ul>
 </nav>
     </header>
